tests/compile_errors/009-bad-named-variable-value.buzz
// Bad value type: got type `int`, expected `str`
test "bad named variable value" {
    var hello = "hello";

    hello = 12;

    _: [int] = [
        true,
        12,
    ];
}
